vlib/v/checker/tests/interface_implemented_by_function.out
vlib/v/checker/tests/interface_implemented_by_function.vv:6:6: error: cannot implement interface `Ch` using function
    4 |
    5 | fn main() {
    6 |   id(id)
      |      ~~
    7 | }