vlib/v/checker/tests/interface_implemented_by_function.vv
interface Ch {}

fn id(x Ch) Ch { return x }

fn main() {
  id(id)
}
